--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-helmet": "^5.2.1"
   },
   "scripts": {
-    "deploy": "gatsby clean && gatsby build && node deploy",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "start": "gatsby clean && gatsby develop",
     "develop": "gatsby develop",
     "build": "npm run clean && gatsby build",
